# esp32-camera-station

./: Dockerfile  README.md  pyproject.toml
esp32-camera-station/: __main__.py  camera_server.py  config.py  utils.py
